2003-12-16  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Document execute_installtest.sh

	* examples/execute_installtest.sh: Install testing script. Calls apt.

	* testsuite/run-test.sh (PBUILDER_UML): add regression test on execute script.

	* pbuilder-user-mode-linux.1: update manual page on 
	passing on of the command-line on 'execute'.

	* pbuilder.8: update manual page on passing on of the 
	command-line on 'execute'

	* pbuilder-user-mode-linux (UML_EXECUTE_EXTRAOPT): added new option
	for appending parameters to the end of the pbuilder-command-line.

	* examples/execute_paramtest.sh: sample execute script;
	to give what is given as a parameter.

	* pbuilder-user-mode-linux: || true on unset.

	* pbuilder: Accept command-line options for 'execute' command

2003-12-15  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): document problem with /dev/null

2003-12-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on debconf inside pbuilder.

2003-12-11  Junichi Uekawa  <dancer@debian.org>

	* debuild-pbuilder.1: fix document formatting error, from Roland Stigge.

	* pbuilder-runhooks (hooks): Try and detect file name non-matching case 
	for hooks, from Dale Amon.

2003-11-28    <dancer@zaurus>

	* Documentation/pbuilder-doc.xml: update

2003-11-27  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Conflicts): add conflicts against old bash.
	unset fails.

2003-11-21  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on fakechroot.

2003-11-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: preen fsck.
	comment out fsck bit, it's too slow.

	* THANKS: add 

	* pbuilder-runhooks: fix warning messages to be more correct, thanks
	to Daniel Martin.

2003-11-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): reorder umount and mount so that 