@@ -10,6 +10,7 @@ pbuilder (0.96) UNRELEASED; urgency=low
   * examples/execute_installtest.sh: Tries to 'apt-get install' a package 
     and sees if it does install.
   * examples/execute_paramtest.sh: Just dumps the parameter.
+  TODO: umountproc is not called when error happens; that's not desirable.
 
  -- Junichi Uekawa <dancer@debian.org>  Tue, 16 Dec 2003 08:22:46 +0900
 
